--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Personal Website</title>
@@ -26,19 +27,95 @@
                     <li><a href="#" class="en">English <img src="https://flagsapi.com/US/flat/64.png" alt="English"></a></li>
                     <li><a href="#" class="ar">Arabic <img src="https://flagsapi.com/AE/flat/64.png" alt="Arabic"></a></li>
                     <li><a href="#" class="jp">Japanese <img src="https://flagsapi.com/JP/flat/64.png" alt="Japanese"></a></li>
+                    <!-- <li><a href="#" class="ru">Russian <img src="https://flagsapi.com/RU/flat/64.png" alt="Russian"></a></li> -->
                 </ul>
             </div>
         </nav>
         <section class="hero">
             <div class="hero-container">
                 <div class="column-left">
-                    <h1 id="welcome-message">Welcome to My Personal Website</h1>
-                    <p id="home-page-message">This is the home page.</p>
+                    <h1 id="welcome-message" class="glow">Welcome to My Personal Website</h1>
+                    <p id="home-page-message">I am an Emirati hobbyist. I find joy in learning the intricacies of technology and building them myself from the ground up.</p>
                 </div>
                 <div class="column-right">
                     <img src="images/logo.png" alt="Logo" class="hero-image" />
                 </div>
             </div>
+        </section>
+        <section class="introduction">
+            <h2 class="centered-heading">Introduction</h2>
+            <p>My name is Saif, born in Abu Dhabi in 2001. I graduated with a High School Diploma from STS with a major in Mechanical Engineering, and then completed my Bachelor's degree at HCT in CIS-Applications Development.</p>
+        </section>
+        <section class="skills-summary">
+            <h2 class="centered-heading">Skills Summary</h2>
+            <p>
+                I have tinkered with a lot of activities to complete my projects and become a well-rounded maker. In my journey to educate myself, I have worked with the following:
+                <ul>
+                    <li>3D modeling (AutoDesk, AutoCad, Blender, TinkerCAD) and 3D printing</li>
+                    <li>Programming:
+                        <ul>
+                            <li>Android Studio</li>
+                            <li>Visual Studio</li>
+                            <li>Python IDLE</li>
+                            <li>IntelliJ (created plugins for a video game - Minecraft)</li>
+                            <li>Replit</li>
+                            <li>Spyder</li>
+                            <li>Eclipse</li>
+                            <li>NetBeans</li>
+                        </ul>
+                    </li>
+                </ul>
+            </p>
+        </section>
+        <section class="featured-projects">
+            <h2 class="centered-heading">Featured Projects</h2>
+            <div class="projects-section">
+                <div class="project-card">
+                    <img src="images/placeholder.png" alt="Project 1">
+                    <div class="card-content">
+                        <h3>Project Title 1</h3>
+                        <p><strong>Worked on by:</strong> Saif Sultan AlHarmi<br>
+                        <strong>Supervised by:</strong> Supervisor's Name<br>
+                        <strong>Sponsored by:</strong> Sponsor's Name</p>
+                        <p>[Explanation of the project, its goals, and outcomes.]</p>
+                        <p><strong>Date started:</strong> MM/YYYY<br>
+                        <strong>Date concluded:</strong> MM/YYYY</p>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="images/placeholder.png" alt="Project 2">
+                    <div class="card-content">
+                        <h3>Project Title 2</h3>
+                        <p><strong>Worked on by:</strong> Your Name<br>
+                        <strong>Supervised by:</strong> Supervisor's Name<br>
+                        <strong>Sponsored by:</strong> Sponsor's Name</p>
+                        <p>[Explanation of the project, its goals, and outcomes.]</p>
+                        <p><strong>Date started:</strong> MM/YYYY<br>
+                        <strong>Date concluded:</strong> MM/YYYY</p>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="images/placeholder.png" alt="Project 3">
+                    <div class="card-content">
+                        <h3>Project Title 3</h3>
+                        <p><strong>Worked on by:</strong> Your Name<br>
+                        <strong>Supervised by:</strong> Supervisor's Name<br>
+                        <strong>Sponsored by:</strong> Sponsor's Name</p>
+                        <p>[Explanation of the project, its goals, and outcomes.]</p>
+                        <p><strong>Date started:</strong> MM/YYYY<br>
+                        <strong>Date concluded:</strong> MM/YYYY</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contact-information">
+            <h2>Contact Information</h2>
+            <p>
+                Email: -<br>
+                Phone: <small><i>Provided in person</i></small> <br>
+                <a href="https://www.linkedin.com/in/saif-alharmi-549a48174" class="social-link"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/saifs16" class="social-link"><i class="fab fa-github"></i></a>
+            </p>
         </section>
     </div>
 </body>
