Started Working on the Projects' Cards

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                             <li>Replit</li>
                             <li>Spyder</li>
                             <li>Eclipse</li>
+                            <li>Anaconda</li>
                             <li>NetBeans</li>
                         </ul>
                     </li>
@@ -70,42 +71,7 @@
         <section class="featured-projects">
             <h2 class="centered-heading">Featured Projects</h2>
             <div class="projects-section">
-                <div class="project-card">
-                    <img src="images/placeholder.png" alt="Project 1">
-                    <div class="card-content">
-                        <h3>Project Title 1</h3>
-                        <p><strong>Worked on by:</strong> Saif Sultan AlHarmi<br>
-                        <strong>Supervised by:</strong> Supervisor's Name<br>
-                        <strong>Sponsored by:</strong> Sponsor's Name</p>
-                        <p>[Explanation of the project, its goals, and outcomes.]</p>
-                        <p><strong>Date started:</strong> MM/YYYY<br>
-                        <strong>Date concluded:</strong> MM/YYYY</p>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="images/placeholder.png" alt="Project 2">
-                    <div class="card-content">
-                        <h3>Project Title 2</h3>
-                        <p><strong>Worked on by:</strong> Your Name<br>
-                        <strong>Supervised by:</strong> Supervisor's Name<br>
-                        <strong>Sponsored by:</strong> Sponsor's Name</p>
-                        <p>[Explanation of the project, its goals, and outcomes.]</p>
-                        <p><strong>Date started:</strong> MM/YYYY<br>
-                        <strong>Date concluded:</strong> MM/YYYY</p>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="images/placeholder.png" alt="Project 3">
-                    <div class="card-content">
-                        <h3>Project Title 3</h3>
-                        <p><strong>Worked on by:</strong> Your Name<br>
-                        <strong>Supervised by:</strong> Supervisor's Name<br>
-                        <strong>Sponsored by:</strong> Sponsor's Name</p>
-                        <p>[Explanation of the project, its goals, and outcomes.]</p>
-                        <p><strong>Date started:</strong> MM/YYYY<br>
-                        <strong>Date concluded:</strong> MM/YYYY</p>
-                    </div>
-                </div>
+                <!-- Project cards will be inserted here dynamically -->
             </div>
         </section>
         <section class="contact-information">
