--- a/project-detail.html
+++ b/project-detail.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects - My Personal Website</title>
+    <title>Project Detail - My Personal Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/projects.js" defer></script>
+    <script src="js/project-detail.js" defer></script>
 </head>
 <body>
     <div class="sidebar">
@@ -30,19 +30,8 @@
                 </ul>
             </div>
         </nav>
-        <section class="hero">
-            <div class="hero-container">
-                <div class="column-left">
-                    <h1 id="projects-message">Projects</h1>
-                    <p id="projects-page-message">Here are some of my projects.</p>
-                </div>
-                <div class="column-right">
-                    <img src="images/logo.png" alt="Logo" class="hero-image" />
-                </div>
-            </div>
-        </section>
-        <section class="projects-section" id="projects-section">
-            <!-- Project cards will be inserted here dynamically -->
+        <section class="project-detail" id="project-detail">
+            <!-- Project details will be inserted here dynamically -->
         </section>
     </div>
 </body>
