Added Contact me (No Logic) +Dark mode (Incomplete)

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Personal Website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/script.js" defer></script>
 </head>
@@ -27,8 +28,10 @@
                     <li><a href="#" class="en">English <img src="https://flagsapi.com/US/flat/64.png" alt="English"></a></li>
                     <li><a href="#" class="ar">Arabic <img src="https://flagsapi.com/AE/flat/64.png" alt="Arabic"></a></li>
                     <li><a href="#" class="jp">Japanese <img src="https://flagsapi.com/JP/flat/64.png" alt="Japanese"></a></li>
-                    <!-- <li><a href="#" class="ru">Russian <img src="https://flagsapi.com/RU/flat/64.png" alt="Russian"></a></li> -->
                 </ul>
+            </div>
+            <div class="dark-mode-toggle">
+                <span class="material-icons">dark_mode</span>
             </div>
         </nav>
         <section class="hero">
