--- a/projects.html
+++ b/projects.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects - My Personal Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/projects.js" defer></script>
+    <script src="js/script.js" defer></script>
 </head>
 <body>
     <div class="sidebar">
@@ -28,6 +29,9 @@
                     <li><a href="#" class="ar">Arabic <img src="https://flagsapi.com/AE/flat/64.png" alt="Arabic"></a></li>
                     <li><a href="#" class="jp">Japanese <img src="https://flagsapi.com/JP/flat/64.png" alt="Japanese"></a></li>
                 </ul>
+            </div>
+            <div class="dark-mode-toggle">
+                <span class="material-icons">dark_mode</span>
             </div>
         </nav>
         <section class="hero">
