Added 'Under-Construction' popup

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/script.js" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
     <div class="sidebar">
@@ -87,5 +88,15 @@
             </p>
         </section>
     </div>
+    <div id="overlay"></div>
+        <div id="popup" class="popup-overlay">
+            <div class="popup">
+                <img src="images/under_construction.png" alt="Popup Image" class="popup-image">
+                <h2>Welcome to My Website</h2>
+                <p>This website is currently under progress, please visit check in another time.</p>
+                <button id="close-popup">Visit anyways</button>
+            </div>
+        </div>    
+    </div>    
 </body>
 </html>
