--- a/project-detail.html
+++ b/project-detail.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/project-detail.js" defer></script>
+    <script src="js/script.js" defer></script>
 </head>
 <body>
     <div class="sidebar">
